[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euc.kingsong"
version = "0.3.0"
description = "python library for KingSong Electric Unicycles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mariusz Kryński", email = "mrk@sed.pl"}
]
homepage = "https://github.com/moleus/euc-kingsong-lib"
keywords = ["euc", "dbussy", "kingsong"]
dependencies = [
    "euc @ git+https://github.com/moleus/euc-lib.git@0.3.0"
]

[project.urls]
"Homepage" = "https://github.com/moleus/euc-kingsong-lib"

[project.optional-dependencies]
dev = ["black", "flake8"]
tests = ["pytest"]

[project.entry-points."euc.device.driver"]
kingsong = "euc.kingsong:KS"
